chore: add docker-compose.yaml

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
 
     <section>
       <h2>Awards & Recognition</h2>
-      <ul>
+      <ul class="awards-list">
         <li>2 Golden Globe Awards</li>
         <li>5 Primetime Emmy Awards</li>
         <li>Peabody Award in 2005</li>
