--- a/public/styles.css
+++ b/public/styles.css
@@ -28,7 +28,7 @@ body {
   }
 
   section {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 
   footer {
@@ -36,4 +36,16 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
+  }
+
+  .awards-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: disc;
+    padding-left: 20px;
+    gap: 10px 40px; /* space between rows and columns */
+  }
+
+  .awards-list li {
+    flex: 0 0 45%; /* each item takes about half the width */
   }
